Have make conditional-generating function read the quark name from the arg

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1416,10 +1416,8 @@
 % \begin{macro}[pTF]{\@@_quark_if_nil:n}
 %   Branching quark conditional.
 %    \begin{macrocode}
-\__kernel_quark_conditional_generate:NNnn \@@_quark_if_nil:n
-  \q_@@_nil { @@ } { TF }
-\__kernel_quark_conditional_generate:NNnn \@@_quark_if_no_value:N
-  \q_@@_no_value { @@ } { TF }
+\__kernel_quark_conditional_generate:Nn \@@_quark_if_nil:n { TF }
+\__kernel_quark_conditional_generate:Nn \@@_quark_if_no_value:N { TF }
 %    \end{macrocode}
 % \end{macro}
 %
