--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -408,6 +408,13 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\q_@@_nil}
+%   Private quark use for some tests.
+%    \begin{macrocode}
+\quark_new:N \q_@@_nil
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}[EXP]{\quark_if_recursion_tail_stop:N}
 % \UnitTested
 % \begin{macro}[EXP]{\quark_if_recursion_tail_stop_do:Nn}
@@ -605,7 +612,7 @@
 %   \end{description}
 %   Any other signature causes an error, as does a function without signature.
 %
-% \begin{macro}{\__kernel_quark_conditional_generate:NNnn}
+% \begin{macro}{\__kernel_quark_conditional_generate:Nn}
 %   Similar to \cs{__kernel_quark_test_generate:N}, but defines
 %   quark branching conditionals like \cs{quark_if_nil:nTF}
 %   using |#2| as the test quark, |#3| as the name-space to define
@@ -622,7 +629,7 @@
 %   \@@_test_generate_aux:nnNNnNnn, \@@_test_generate_choose:nNnNnn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_quark_test_generate:N #1
-  { \@@_test_generate_aux:Nn #1 { __ \@@_get_module_name:N #1 } }
+  { \@@_test_generate_aux:Nx #1 { __ \@@_get_module_name:N #1 } }
 \cs_new_protected:Npn \@@_test_generate_aux:Nn #1 #2
   {
     \@@_test_generate:Nccn #1
@@ -636,12 +643,22 @@
       #1 { test }
   }
 \cs_generate_variant:Nn \@@_test_generate:NNNn { Ncc }
-\cs_new_protected:Npn \__kernel_quark_conditional_generate:NNnn #1
+\cs_new_protected:Npn \__kernel_quark_conditional_generate:Nn #1
+  {
+    \@@_conditional_generate_aux:Nxxn #1
+      { __ \@@_get_module_name:N #1 }
+      { \@@_get_quark_name:N #1 }
+  }
+\cs_new_protected:Npn \@@_conditional_generate_aux:Nnnn #1 #2 #3
+  { \@@_conditional_generate:Ncnn #1 { q #2 _ #3 } {#2} }
+\cs_generate_variant:Nn \@@_conditional_generate_aux:Nnnn { Nxx }
+\cs_new_protected:Npn \@@_conditional_generate:NNnn #1
   {
     \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
       { \cs_split_function:N #1 }
       #1 { conditional }
   }
+\cs_generate_variant:Nn \@@_conditional_generate:NNnn { Nc }
 \cs_new_protected:Npn \@@_test_generate_aux:nnNNnNnn #1 #2 #3 #4
   {
     \reverse_if:N \if_bool:N #3
@@ -894,7 +911,7 @@
 \cs_new:Npx \@@_get_module_name:N #1
   {
     \exp_not:N \exp_last_unbraced:Nf \exp_not:N \@@_get_module_name_auxi:w
-      { \exp_not:N \cs_to_str:N #1 } \token_to_str:N _ \exp_not:N \s_@@
+      { \exp_not:N \cs_to_str:N #1 } \token_to_str:N _ \s_@@
   }
 \cs_new:Npn \@@_get_module_name_auxi:w #1
   {
@@ -925,6 +942,51 @@
           #1
         \fi:
       }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[rEXP]{\@@_get_quark_name:N}
+% \begin{macro}[rEXP]{
+%     \@@_quark_name_after_if:w,
+%     \@@_quark_name_after_if_cleanup:w,
+%     \@@_quark_name_until_colon:w,
+%   }
+%   \cs{@@_get_quark_name:N} takes a quark conditional function, and tries to
+%   guess the quark name that that function queries.  \cs{@@_get_quark_name:N}
+%   looks for the string |_quark_if_| in the function name, and takes everything
+%   up to the |:| as the name of the quark.  If either is not present, an error
+%   is raised and \cs{@@_get_quark_name:N} returns an empty string.
+%    \begin{macrocode}
+\cs_set:Npn \@@_tmp:w #1#2
+  {
+    \cs_new:Npn \@@_get_quark_name:N ##1
+      {
+        \exp_last_unbraced:Nf \@@_quark_name_after_if:w
+          { \cs_to_str:N ##1 } #1 \q_@@_nil \s_@@
+      }
+    \cs_new:Npn \@@_quark_name_after_if:w ##1 #1 ##2 \s_@@
+      {
+        \if_meaning:w \q_@@_nil ##2
+          \__kernel_msg_expandable_error:nn
+            { kernel } { invalid-quark-function }
+          \use_i:nnn
+        \fi:
+        \use:n { \@@_quark_name_after_if_cleanup:w ##2 }
+      }
+    \cs_new:Npn \@@_quark_name_after_if_cleanup:w ##1 #1 \q_@@_nil
+      { \@@_quark_name_until_colon:w ##1 #2 \q_@@_nil \s_@@ }
+    \cs_new:Npn \@@_quark_name_until_colon:w ##1 #2 ##2 \s_@@
+      {
+        \if_meaning:w \q_@@_nil ##2
+          \__kernel_msg_expandable_error:nn
+            { kernel } { invalid-quark-function }
+        \else:
+          ##1
+        \fi:
+      }
+  }
+\exp_args:Nxx \@@_tmp:w { \tl_to_str:n { _quark_if_ } } { \tl_to_str:n { : } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
