--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1120,8 +1120,7 @@
 % \begin{macro}[pTF]{\@@_quark_if_no_value:N}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_conditional_generate:NNnn \@@_quark_if_no_value:N
-  \q_@@_no_value { @@ } { TF }
+\__kernel_quark_conditional_generate:Nn \@@_quark_if_no_value:N { TF }
 %    \end{macrocode}
 % \end{macro}
 %
