--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2432,8 +2432,7 @@
 % \begin{macro}[pTF]{\@@_quark_if_nil:n}
 %   Branching quark conditional.
 %    \begin{macrocode}
-\__kernel_quark_conditional_generate:NNnn \@@_quark_if_nil:n
-  \q_@@_nil { @@ } { TF }
+\__kernel_quark_conditional_generate:Nn \@@_quark_if_nil:n { TF }
 %    \end{macrocode}
 % \end{macro}
 %
