--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1529,8 +1529,7 @@
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
 \__kernel_quark_test_generate:N \@@_if_recursion_tail_break:nN
-\__kernel_quark_conditional_generate:NNnn \@@_quark_if_nil:n
-  \q_@@_nil { @@ } { TF }
+\__kernel_quark_conditional_generate:Nn \@@_quark_if_nil:n { TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
