Rename kernel quark functions
\__kernel_quark_test_generate:N -> \__kernel_quark_new_test:N and \__kernel_quark_conditional_generate:Nn -> \__kernel_quark_new_conditional:Nn to match other command-defining functions.

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -814,8 +814,8 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_break:nN,\@@_if_recursion_tail_stop:n}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:N \@@_if_recursion_tail_break:nN
-\__kernel_quark_test_generate:N \@@_if_recursion_tail_stop:n
+\__kernel_quark_new_test:N \@@_if_recursion_tail_break:nN
+\__kernel_quark_new_test:N \@@_if_recursion_tail_stop:n
 %    \end{macrocode}
 % \end{macro}
 %
