--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -639,7 +639,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop:o}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:N \@@_if_recursion_tail_stop:n
+\__kernel_quark_new_test:N \@@_if_recursion_tail_stop:n
 \cs_generate_variant:Nn \@@_if_recursion_tail_stop:n { o }
 %    \end{macrocode}
 % \end{macro}
