--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -590,8 +590,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\__kernel_quark_test_generate:N}
-%   The function \cs{__kernel_quark_test_generate:N} defines |#1| in a
+% \begin{macro}{\__kernel_quark_new_test:N}
+%   The function \cs{__kernel_quark_new_test:N} defines |#1| in a
 %   similar way as
 %   \cs[no-index]{quark_if_recursion_tail_stop(_do):(N|n)(n)}.  using
 %   \cs[no-index]{q\meta{namespace}_recursion_tail} as the test quark
@@ -612,8 +612,8 @@
 %   \end{description}
 %   Any other signature causes an error, as does a function without signature.
 %
-% \begin{macro}{\__kernel_quark_conditional_generate:Nn}
-%   Similar to \cs{__kernel_quark_test_generate:N}, but defines
+% \begin{macro}{\__kernel_quark_new_conditional:Nn}
+%   Similar to \cs{__kernel_quark_new_test:N}, but defines
 %   quark branching conditionals like \cs{quark_if_nil:nTF}
 %   using |#2| as the test quark, |#3| as the name-space to define
 %   auxiliaries, and |#4| is the list of conditional variants to define.
@@ -625,49 +625,49 @@
 %   \end{description}
 %   Any other signature causes an error, as does a function without signature.
 %
-% \begin{macro}{\@@_test_generate:NNNn, \@@_test_generate:Nccn,
-%   \@@_test_generate_aux:nnNNnNnn, \@@_test_generate_choose:nNnNnn}
+% \begin{macro}{\@@_new_test:NNNn, \@@_new_test:Nccn,
+%   \@@_new_test_aux:nnNNnNnn, \@@_new_test_choose:nNnNnn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \__kernel_quark_test_generate:N #1
-  { \@@_test_generate_aux:Nx #1 { __ \@@_get_module_name:N #1 } }
-\cs_new_protected:Npn \@@_test_generate_aux:Nn #1 #2
+\cs_new_protected:Npn \__kernel_quark_new_test:N #1
+  { \@@_new_test_aux:Nx #1 { __ \@@_get_module_name:N #1 } }
+\cs_new_protected:Npn \@@_new_test_aux:Nn #1 #2
   {
-    \@@_test_generate:Nccn #1
+    \@@_new_test:Nccn #1
       { q #2 _recursion_tail } { q #2 _recursion_stop } {#2}
   }
-\cs_generate_variant:Nn \@@_test_generate_aux:Nn { Nx }
-\cs_new_protected:Npn \@@_test_generate:NNNn #1
+\cs_generate_variant:Nn \@@_new_test_aux:Nn { Nx }
+\cs_new_protected:Npn \@@_new_test:NNNn #1
   {
-    \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
+    \exp_last_unbraced:Nf \@@_new_test_aux:nnNNnNnn
       { \cs_split_function:N #1 }
       #1 { test }
   }
-\cs_generate_variant:Nn \@@_test_generate:NNNn { Ncc }
-\cs_new_protected:Npn \__kernel_quark_conditional_generate:Nn #1
+\cs_generate_variant:Nn \@@_new_test:NNNn { Ncc }
+\cs_new_protected:Npn \__kernel_quark_new_conditional:Nn #1
   {
-    \@@_conditional_generate:Nxxn #1
+    \@@_new_conditional:Nxxn #1
       { \@@_get_quark_name:N #1 }
       { __ \@@_get_module_name:N #1 }
   }
-\cs_new_protected:Npn \@@_conditional_generate:Nnnn #1
+\cs_new_protected:Npn \@@_new_conditional:Nnnn #1
   {
-    \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
+    \exp_last_unbraced:Nf \@@_new_test_aux:nnNNnNnn
       { \cs_split_function:N #1 }
       #1 { conditional }
   }
-\cs_generate_variant:Nn \@@_conditional_generate:Nnnn { Nxx }
-\cs_new_protected:Npn \@@_test_generate_aux:nnNNnNnn #1 #2 #3 #4
+\cs_generate_variant:Nn \@@_new_conditional:Nnnn { Nxx }
+\cs_new_protected:Npn \@@_new_test_aux:nnNNnNnn #1 #2 #3 #4
   {
     \reverse_if:N \if_bool:N #3
       \__kernel_msg_error:nnx { kernel } { missing-colon }
         { \token_to_str:N #4 }
       \exp_after:wN \use_none:nnnnnnn
     \fi:
-    \@@_test_generate_choose:nNnNnn {#2} #4
+    \@@_new_test_choose:nNnNnn {#2} #4
   }
-\cs_new_protected:Npn \@@_test_generate_choose:nNnNnn #1 #2 #3
+\cs_new_protected:Npn \@@_new_test_choose:nNnNnn #1 #2 #3
   {
-    \cs_if_exist_use:cTF { @@_#3_generate_#1:Nnnn } { #2 }
+    \cs_if_exist_use:cTF { @@_new_#3_#1:Nnnn } { #2 }
       {
         \__kernel_msg_error:nnxx { kernel } { invalid-quark-function }
           { \token_to_str:N #2 } {#1}
@@ -680,65 +680,65 @@
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_test_generate_n:Nnnn, \@@_test_generate_nn:Nnnn,
-%     \@@_test_generate_N:Nnnn, \@@_test_generate_Nn:Nnnn,
-%     \@@_test_generate_NN:Nnnn, \@@_test_generate_NN:Nnnn,
+%     \@@_new_test_n:Nnnn, \@@_new_test_nn:Nnnn,
+%     \@@_new_test_N:Nnnn, \@@_new_test_Nn:Nnnn,
+%     \@@_new_test_NN:Nnnn, \@@_new_test_NN:Nnnn,
 %   }
 %   These macros implement the six possibilities mentioned above, passing
-%   the right arguments to \cs{@@_test_generate_aux_do:nNNnnnnN},
+%   the right arguments to \cs{@@_new_test_aux_do:nNNnnnnN},
 %   which defines some auxiliaries, and then to
-%   \cs{@@_test_generate_define_tl:nNNNNn} (|:n(n)| variants) or to
-%   \cs{@@_test_generate_define_ifx:nNNNNn} (|:N(n)|) which define the
+%   \cs{@@_new_test_define_tl:nNNNNn} (|:n(n)| variants) or to
+%   \cs{@@_new_test_define_ifx:nNNNNn} (|:N(n)|) which define the
 %   main conditionals.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_test_generate_n:Nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \@@_new_test_n:Nnnn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { none } { } { } { }
-      \@@_test_generate_define_tl:nNNNNn #1 { }
+    \@@_new_test_aux_do:nNNnnnnN {#4} #2 #3 { none } { } { } { }
+      \@@_new_test_define_tl:nNNNNn #1 { }
   }
-\cs_new_protected:Npn \@@_test_generate_nn:Nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \@@_new_test_nn:Nnnn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_tl:nNNNNn #1 { \use_none:n }
+    \@@_new_test_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_new_test_define_tl:nNNNNn #1 { \use_none:n }
   }
-\cs_new_protected:Npn \@@_test_generate_nN:Nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \@@_new_test_nN:Nnnn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_break_tl:nNNNNn #1 { }
+    \@@_new_test_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_new_test_define_break_tl:nNNNNn #1 { }
   }
-\cs_new_protected:Npn \@@_test_generate_N:Nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \@@_new_test_N:Nnnn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { none } { } { } { }
-      \@@_test_generate_define_ifx:nNNNNn #1 { }
+    \@@_new_test_aux_do:nNNnnnnN {#4} #2 #3 { none } { } { } { }
+      \@@_new_test_define_ifx:nNNNNn #1 { }
   }
-\cs_new_protected:Npn \@@_test_generate_Nn:Nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \@@_new_test_Nn:Nnnn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_ifx:nNNNNn #1 { \use_none:n }
+    \@@_new_test_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_new_test_define_ifx:nNNNNn #1 { \use_none:n }
   }
-\cs_new_protected:Npn \@@_test_generate_NN:Nnnn #1 #2 #3 #4
+\cs_new_protected:Npn \@@_new_test_NN:Nnnn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_break_ifx:nNNNNn #1 { }
+    \@@_new_test_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_new_test_define_break_ifx:nNNNNn #1 { }
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_test_generate_aux_do:nNNnnnnN,
+%     \@@_new_test_aux_do:nNNnnnnN,
 %     \@@_test_define_aux:NNNNnnN
 %   }
-%   \cs{@@_test_generate_aux_do:nNNnnnnN} makes the control sequence names
+%   \cs{@@_new_test_aux_do:nNNnnnnN} makes the control sequence names
 %   which will be used by \cs{@@_test_define_aux:NNNNnnN}, and then later
-%   by \cs{@@_test_generate_define_tl:nNNNNn} or
-%   \cs{@@_test_generate_define_ifx:nNNNNn}. The control sequences defined
+%   by \cs{@@_new_test_define_tl:nNNNNn} or
+%   \cs{@@_new_test_define_ifx:nNNNNn}. The control sequences defined
 %   here are analogous to \cs{@@_if_recursion_tail:w} and to
 %   \cs[no-index]{use_(none|i)_delimit_by_q_recursion_stop:(|n)w}.
 %
 %   The name is composed by the name-space and the name of the quarks.
-%   Suppose \cs{__kernel_quark_test_generate:N} was used with:
+%   Suppose \cs{__kernel_quark_new_test:N} was used with:
 %   \begin{verbatim}
-%     \__kernel_quark_test_generate:N \__test_quark_tail:n
+%     \__kernel_quark_new_test:N \__test_quark_tail:n
 %   \end{verbatim}
 %   then the first auxiliary will be \cs[no-index]{__test_quark_recursion_tail:w},
 %   and the second one will be
@@ -747,7 +747,7 @@
 %   Note that the actual quarks are \emph{not} defined here. They should
 %   be defined separately using \cs{quark_new:N}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_test_generate_aux_do:nNNnnnnN #1 #2 #3 #4 #5
+\cs_new_protected:Npn \@@_new_test_aux_do:nNNnnnnN #1 #2 #3 #4 #5
   {
     \exp_args:Ncc \@@_test_define_aux:NNNNnnN
       { #1 _quark_recursion_tail:w }
@@ -764,17 +764,17 @@
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_test_generate_define_tl:nNNNNn,
-%     \@@_test_generate_define_ifx:nNNNNn
+%     \@@_new_test_define_tl:nNNNNn,
+%     \@@_new_test_define_ifx:nNNNNn
 %   }
 % \begin{macro}{
-%     \@@_test_generate_define_break_tl:nNNNNn,
-%     \@@_test_generate_define_break_ifx:nNNNNn
+%     \@@_new_test_define_break_tl:nNNNNn,
+%     \@@_new_test_define_break_ifx:nNNNNn
 %   }
 %   Finally, these two macros define the main conditional function using
 %   what's been set up before.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_test_generate_define_tl:nNNNNn #1 #2 #3 #4 #5 #6
+\cs_new_protected:Npn \@@_new_test_define_tl:nNNNNn #1 #2 #3 #4 #5 #6
   {
     \cs_new:Npn #5 #1
       {
@@ -783,7 +783,7 @@
           {#3} {#6}
       }
   }
-\cs_new_protected:Npn \@@_test_generate_define_ifx:nNNNNn #1 #2 #3 #4 #5 #6
+\cs_new_protected:Npn \@@_new_test_define_ifx:nNNNNn #1 #2 #3 #4 #5 #6
   {
     \cs_new:Npx #5 #1
       {
@@ -794,47 +794,47 @@
         \exp_not:N \fi:
       }
   }
-\cs_new_protected:Npn \@@_test_generate_define_break_tl:nNNNNn #1 #2 #3
-  { \@@_test_generate_define_tl:nNNNNn {##1##2} #2 {##2} }
-\cs_new_protected:Npn \@@_test_generate_define_break_ifx:nNNNNn #1 #2 #3
-  { \@@_test_generate_define_ifx:nNNNNn {##1##2} #2 {##2} }
+\cs_new_protected:Npn \@@_new_test_define_break_tl:nNNNNn #1 #2 #3
+  { \@@_new_test_define_tl:nNNNNn {##1##2} #2 {##2} }
+\cs_new_protected:Npn \@@_new_test_define_break_ifx:nNNNNn #1 #2 #3
+  { \@@_new_test_define_ifx:nNNNNn {##1##2} #2 {##2} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_conditional_generate_n:Nnnn,
-%     \@@_conditional_generate_N:Nnnn,
+%     \@@_new_conditional_n:Nnnn,
+%     \@@_new_conditional_N:Nnnn,
 %   }
 %   These macros implement the two possibilities for branching quark
 %   conditionals, passing
-%   the right arguments to \cs{@@_conditional_generate_aux_do:nn},
+%   the right arguments to \cs{@@_new_conditional_aux_do:nn},
 %   which defines some auxiliaries, and then to
-%   \cs{@@_conditional_generate_define:nNNNNn} which defines the
+%   \cs{@@_new_conditional_define:nNNNNn} which defines the
 %   main conditionals.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_conditional_generate_n:Nnnn #1 #2 #3
+\cs_new_protected:Npn \@@_new_conditional_n:Nnnn #1 #2 #3
   {
-    \@@_conditional_generate_aux_do:nn {#3} {#2}
-      \@@_conditional_generate_define:nNNNNn #1 \use_i:nn
+    \@@_new_conditional_aux_do:nn {#3} {#2}
+      \@@_new_conditional_define:nNNNNn #1 \use_i:nn
   }
-\cs_new_protected:Npn \@@_conditional_generate_N:Nnnn #1 #2 #3
+\cs_new_protected:Npn \@@_new_conditional_N:Nnnn #1 #2 #3
   {
-    \@@_conditional_generate_aux_do:nn {#3} {#2}
-      \@@_conditional_generate_define:nNNNNn #1 \use_ii:nn
+    \@@_new_conditional_aux_do:nn {#3} {#2}
+      \@@_new_conditional_define:nNNNNn #1 \use_ii:nn
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_conditional_generate_aux_do:nn,
+%     \@@_new_conditional_aux_do:nn,
 %     \@@_conditional_define_aux:NN,
-%     \@@_conditional_generate_define:nNNNNn
+%     \@@_new_conditional_define:nNNNNn
 %   }
 %   Similar to the previous macros, but branching conditionals only require
 %   one auxiliary, so we take a shortcut.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_conditional_generate_aux_do:nn #1 #2
+\cs_new_protected:Npn \@@_new_conditional_aux_do:nn #1 #2
   {
     \exp_args:Ncc \@@_conditional_define_aux:NN
       { #1 _if_quark_ #2 :w } { q #1 _ #2 }
@@ -844,7 +844,7 @@
     \cs_gset:Npn #1  ##1 #2 ##2 ? ##3 ?! { ##1 ##2 }
     #3 {##1} #1 #2
   }
-\cs_new_protected:Npn \@@_conditional_generate_define:nNNNNn #1 #2 #3 #4 #5 #6
+\cs_new_protected:Npn \@@_new_conditional_define:nNNNNn #1 #2 #3 #4 #5 #6
   {
     \exp_args:Nno \use:n { \prg_new_conditional:Npnn #4 #1 {#6} }
       {
