--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -329,9 +329,9 @@
 %   and variable mappings.
 % \end{variable}
 %
-% \begin{function}{\__kernel_quark_test_generate:N}
+% \begin{function}{\__kernel_quark_new_test:N}
 %   \begin{syntax}
-%     \cs{__kernel_quark_test_generate:N} \cs[no-index]{\meta{name}:\meta{arg spec}}
+%     \cs{__kernel_quark_new_test:N} \cs[no-index]{\meta{name}:\meta{arg spec}}
 %   \end{syntax}
 %   Defines a quark-test function \cs[no-index]{\meta{name}:\meta{arg spec}}
 %   which tests if its argument is \cs[no-index]{q\meta{namespace}_recursion_tail},
@@ -346,7 +346,7 @@
 %   in the definition of auxiliaries (for example |__module|), obtained
 %   for instance as |@@| when using \pkg{l3docstrip}.
 %
-%   \cs{__kernel_quark_test_generate:N} can define $6$ different
+%   \cs{__kernel_quark_new_test:N} can define $6$ different
 %   types of quark-test functions. Which one is defined depends on
 %   the \meta{arg spec} of the given function:
 %   \begin{description}
@@ -383,15 +383,15 @@
 %   Any other signature, as well as a function without signature
 %   are errors, and in such case the definition is aborted.
 %
-%   \cs{__kernel_quark_test_generate:N} does \emph{not} define
+%   \cs{__kernel_quark_new_test:N} does \emph{not} define
 %   the \cs[no-index]{q\meta{namespace}_recursion_tail} and
 %   \cs[no-index]{q\meta{namespace}_recursion_stop}.
 %   They should be manually defined with \cs{quark_new:N}.
 % \end{function}
 %
-% \begin{function}{\__kernel_quark_conditional_generate:Nn}
+% \begin{function}{\__kernel_quark_new_conditional:Nn}
 %   \begin{syntax}
-%     \cs{__kernel_quark_conditional_generate:Nn} \cs[no-index]{\meta{name}:\meta{arg spec}} \Arg{conditions}
+%     \cs{__kernel_quark_new_conditional:Nn} \cs[no-index]{\meta{name}:\meta{arg spec}} \Arg{conditions}
 %   \end{syntax}
 %   Defines a quark conditional \cs[no-index]{\meta{name}:\meta{arg spec}}
 %   which tests if its argument is the \cs[no-index]{\meta{test-quark}},
@@ -415,7 +415,7 @@
 %   \meta{namespace} should be the name space to be used internally
 %   in the definition of auxiliaries (for example |__module|).
 %
-%   \cs{__kernel_quark_conditional_generate:Nn} can define $2$ different
+%   \cs{__kernel_quark_new_conditional:Nn} can define $2$ different
 %   types of quark-test functions. Which one is defined depends on
 %   the \meta{arg spec} of the given function:
 %   \begin{description}
@@ -432,7 +432,7 @@
 %   Any other signature, as well as a function without signature
 %   are errors, and in such case the definition is aborted.
 %
-%   \cs{__kernel_quark_conditional_generate:Nn} does \emph{not} define
+%   \cs{__kernel_quark_new_conditional:Nn} does \emph{not} define
 %   the \cs[no-index]{\meta{test-quark}}.
 %   It~should be manually defined with \cs{quark_new:N}.
 % \end{function}
