--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -271,7 +271,7 @@
 % \begin{macro}[pTF]{\@@_quark_if_nil:n}
 %   Branching quark conditional.
 %    \begin{macrocode}
-\__kernel_quark_conditional_generate:Nn \@@_quark_if_nil:n { TF }
+\__kernel_quark_new_conditional:Nn \@@_quark_if_nil:n { TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -294,7 +294,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop_do:Nn}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:N \@@_if_recursion_tail_stop_do:Nn
+\__kernel_quark_new_test:N \@@_if_recursion_tail_stop_do:Nn
 %    \end{macrocode}
 % \end{macro}
 %
