--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1528,8 +1528,8 @@
 % \begin{macro}[pTF]{\@@_if_recursion_tail_stop:n}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:N \@@_if_recursion_tail_break:nN
-\__kernel_quark_conditional_generate:Nn \@@_quark_if_nil:n { TF }
+\__kernel_quark_new_test:N \@@_if_recursion_tail_break:nN
+\__kernel_quark_new_conditional:Nn \@@_quark_if_nil:n { TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
