Make error message more precise

--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -641,7 +641,8 @@
 \cs_new_protected:Npn \@@_new_test_aux:Nn #1 #2
   {
     \if_meaning:w \q_nil #2 \q_nil
-      \__kernel_msg_expandable_error:nn { kernel } { invalid-quark-function }
+      \__kernel_msg_error:nnx { kernel } { invalid-quark-function }
+        { \token_to_str:N #1 }
     \else:
       \@@_new_test:Nccn #1
         { q__#2_recursion_tail } { q__#2_recursion_stop } { __#2 }
@@ -664,10 +665,12 @@
 \cs_new_protected:Npn \@@_new_conditional:Nnnn #1#2#3#4
   {
     \if_meaning:w \q_nil #2 \q_nil
-      \__kernel_msg_error:nn { kernel } { invalid-quark-function }
+      \__kernel_msg_error:nnx { kernel } { invalid-quark-function }
+        { \token_to_str:N #1 }
     \else:
       \if_meaning:w \q_nil #3 \q_nil
-        \__kernel_msg_error:nn { kernel } { invalid-quark-function }
+        \__kernel_msg_error:nnx { kernel } { invalid-quark-function }
+          { \token_to_str:N #1 }
       \else:
         \exp_last_unbraced:Nf \@@_new_test_aux:nnNNnnnn
           { \cs_split_function:N #1 }
